NXCM-289 add reporting tool and Readme for funkload test